Making the head bold
VERY BOLD

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>ARTG2260 Assignments</title>
+		<title><b>ARTG2260 Assignments</b>></title>
 	</head>
 	<body>
 		<h1>This is a Heading</h1>
