Made understand bold
because the other one was a bit stupid.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title><b>ARTG2260 Assignments</b>></title>
+		<title>ARTG2260 Assignments</title>
 	</head>
 	<body>
 		<h1>This is a Heading</h1>
 		<p>This is a paragraph.</p>
-		<p>This is a naugthy extra paragraph to make sure I underdstand how this all works</p>
-
+		<p>This is a naugthy extra paragraph to make sure I <b>underdstand</b> how this all works</p>
 	</body>
 	</html>
