--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<html>
 	<head>
 		<title>ARTG2260 Assignments</title>
+		 <link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<h1>This is a Heading</h1>
