--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 		<h1>This is a Heading</h1>
 		<p>This is a paragraph.</p>
 		<p>This is a naugthy extra paragraph to make sure I <b>underdstand</b> how this all works, so hopefully it does</p>
+		<p> Oh, what a beautiful mornin'<br>
+			Oh, what a beautiful day<br>
+			I've got a beautiful feelin'<br>
+			Everything's goin' my way</p>
+	</body>
 	</body>
 	</html>
