--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			Oh, what a beautiful day<br>
 			I've got a beautiful feelin'<br>
 			Everything's goin' my way</p>
+
+		<img src = "Courtroom1.jpg" alt = "AGGRJECTAR" style="width:50px;">
 	</body>
 	</body>
 	</html>
