Abril Abril Abrin

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			I've got a beautiful feelin'<br>
 			Everything's goin' my way</p>
 
-		<img src = "Courtroom1.jpg" alt = "AGGRJECTAR" style="width:200px;">
+		<img src = "Courtroom1.jpg" alt = "AGGRJECTAR">
 	</body>
 	</body>
 	</html>
