--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-	<html>
-	<head>
-		<title>ARTG2260 Assignments</title>
-		 <link rel="stylesheet" href="styles.css">
-	</head>
-	<body>
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph.</p>
-		<p>This is a naugthy extra paragraph to make sure I <b>underdstand</b> how this all works, so hopefully it does</p>
-		<p> Oh, what a beautiful mornin'<br>
-			Oh, what a beautiful day<br>
-			I've got a beautiful feelin'<br>
-			Everything's goin' my way</p>
+<html>
+<head>
+	<title>ARTG2260 Assignments</title>
+	<link rel="stylesheet" href="styles.css">
+		<meta charset="utf-8">
+  	  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-		<img src = "Courtroom1.jpg" alt = "AGGRJECTAR">
-	</body>
-	</body>
-	</html>
+</head>
+<body>
+	<div class = "container-fluid bg-1">
+		<h1>Elijah Cobb's Website</h1>
+	</div>
+	<div class = "row bg-2 container-fluid">
+		<div class = "col-sm-8">
+			<p> Oh, what a beautiful mornin'<br>
+				Oh, what a beautiful day<br>
+				I've got a beautiful feelin'<br>
+				Everything's goin' my way</p>
+		</div>
+		<div class = "col-sm-4">
+			<img src = "Courtroom1.jpg" alt = "AGGRJECTAR">
+		</div>
+	</div>
+</body>
+</html>
