Put a classier spin on all of it

--- a/index.html
+++ b/index.html
@@ -12,19 +12,66 @@
 
 </head>
 <body>
-	<div class = "container-fluid bg-1">
-		<h1>Elijah Cobb's Website</h1>
-	</div>
+	<nav>
+		<div class = "navbar navbar-default">
+			<div class = "container-fluid bg-1">
+				<div class = "navbar-header">
+					<a class="navbar-brand" href = "index.html">Programming Basics Assignments</a>
+				</div>
+				<ul class = "nav navbar-nav">
+					<li><a href="about.html">About</a></li>
+					<li><a href="#">Pages</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<div class = "row bg-2 container-fluid">
-		<div class = "col-sm-8">
+		<div class = "col-md-9">
 			<p> Oh, what a beautiful mornin'<br>
 				Oh, what a beautiful day<br>
 				I've got a beautiful feelin'<br>
 				Everything's goin' my way</p>
 		</div>
-		<div class = "col-sm-4">
+		<div class = "col-md-1">
 			<img src = "Courtroom1.jpg" alt = "AGGRJECTAR">
 		</div>
+	</div>
+	<div class = "bott container-fluid">
+			<p>It is an ancient Mariner,<br>
+				And he stoppeth one of three.<br>
+				'By thy long grey beard and glittering eye,<br>
+				Now wherefore stopp'st thou me?<br>
+				<br>
+				The Bridegroom's doors are opened wide,<br>
+				And I am next of kin;<br>
+				The guests are met, the feast is set:<br>
+				May'st hear the merry din.'<br><br>
+
+				He holds him with his skinny hand,<br>
+				'There was a ship,' quoth he.<br>
+				'Hold off! unhand me, grey-beard loon!'<br>
+				Eftsoons his hand dropt he.<br><br>
+
+				He holds him with his glittering eye—<br>
+				The Wedding-Guest stood still,<br>
+				And listens like a three years' child:<br>
+				The Mariner hath his will.<br><br>
+
+				The Wedding-Guest sat on a stone:<br><br>
+				He cannot choose but hear;<br>
+				And thus spake on that ancient man,<br>
+				The bright-eyed Mariner.
+				<br><br>
+				'The ship was cheered, the harbour cleared,<br>
+				Merrily did we drop<br>
+				Below the kirk, below the hill,<br><br>
+				Below the lighthouse top.<br>
+
+				The Sun came up upon the left,<br>
+				Out of the sea came he!
+				And he shone bright, and on the right<br>
+				Went down into the sea.
+			</p>
 	</div>
 </body>
 </html>
