--- a/about.html
+++ b/about.html
@@ -12,19 +12,24 @@
 
 </head>
 <body>
-<nav>
-		<div class = "navbar navbar-default">
+<div class = "navbar-default navbar-fixed-top">
 			<div class = "container-fluid bg-1">
 				<div class = "navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>
+        				<span class="icon-bar"></span>                        
+      				</button>
 					<a class="navbar-brand" href = "index.html">Programming Basics Assignments</a>
 				</div>
-				<ul class = "nav navbar-nav">
-					<li><a href="about.html">About</a></li>
-					<li><a href="#">Pages</a></li>
-				</ul>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class = "nav navbar-nav">
+						<li><a href="about.html">About</a></li>
+						<li><a href="#">Pages</a></li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</nav>
+	</div>
 	<div class = "bg-2 container-fluid">
 	<p>Willkommen, bienvenue, welcome!<br>
 		Fremde, etranger, stranger.<br>
