--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 					<ul class = "nav navbar-nav">
 						<li><a href="about.html">About</a></li>
 						<li><a href="#">Pages</a></li>
+						<li><a href="#">Random</a></li>
 					</ul>
 				</div>
 			</div>
