Trying to make it so the words fit on mobile
So Elijah's Programings it is

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         				<span class="icon-bar"></span>
         				<span class="icon-bar"></span>                        
       				</button>
-					<a class="navbar-brand" href = "index.html">Programming Basics Assignments</a>
+					<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class = "nav navbar-nav">
