--- a/Random.html
+++ b/Random.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="gah.ico" />
 </head>
 <body>
+	<canvas id="myCanvas" style="position:absolute;top:0;right:0;width:100%;height:100%;z-index:-1;background-color:#fffaf4">
+	</canvas>
 	<div class = "navbar-default navbar-fixed-top">
 		<div class = "container-fluid bg-1">
 			<div class = "navbar-header">
@@ -25,8 +27,15 @@
 				<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class = "nav navbar-nav">
 					<li><a href="about.html">About</a></li>
-					<li><a href="#">Pages</a></li>
-					<li><a href="Random.html">Random</a></li>
+					<li class="dropdown">
+					        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+					        <span class="caret"></span></a>
+					        <ul class="dropdown-menu">
+					          <li><a href="#">Week 1</a></li>
+					          <li><a href="#">Week 2</a></li>
+					          <li><a href="#">Week 3</a></li>
+					       </ul>
+					<li class="active"><a href="Random.html">Random</a></li>
 				</ul>
 			</div>
 		</div>
@@ -40,10 +49,9 @@
 			I've got a beautiful feelin'<br>
 			Everything's goin' my way
 		</p>
-		<p>Willkommen, bienvenue, welcome!<br>
+		<p class = "bore">Willkommen, bienvenue, welcome!<br>
 			Fremde, etranger, stranger.<br>
 			Gluklich zu sehen, je suis enchante,<br>
 			Happy to see you, bleibe, reste, stay.</p>
-		</p>
 	</div>
 </body>
