--- a/about.html
+++ b/about.html
@@ -12,29 +12,38 @@
     <link rel="shortcut icon" type="image/x-icon" href="gah.ico" />
 </head>
 <body>
-<div class = "navbar-default navbar-fixed-top">
-			<div class = "container-fluid bg-1">
-				<div class = "navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>                        
-      				</button>
-					<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
+	<canvas id="myCanvas" style="position:absolute;top:0;right:0;width:100%;height:100%;z-index:-1;background-color:#fffaf4">
+	</canvas>
+	<div class = "navbar-default navbar-fixed-top">
+				<div class = "container-fluid bg-1">
+					<div class = "navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	        				<span class="icon-bar"></span>
+	        				<span class="icon-bar"></span>
+	        				<span class="icon-bar"></span>                        
+	      				</button>
+						<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
+					</div>
+					<div class="collapse navbar-collapse" id="myNavbar">
+						<ul class = "nav navbar-nav">
+							<li class="active"><a href="about.html">About</a></li>
+							<li class="dropdown">
+						        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+						        <span class="caret"></span></a>
+						        <ul class="dropdown-menu">
+						          <li><a href="#">Week 1</a></li>
+						          <li><a href="#">Week 2</a></li>
+						          <li><a href="#">Week 3</a></li>
+						       </ul>
+							<li><a href="Random.html">Random</a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class = "nav navbar-nav">
-						<li><a href="about.html">About</a></li>
-						<li><a href="#">Pages</a></li>
-						<li><a href="Random.html">Random</a></li>
-					</ul>
-				</div>
-			</div>
-	</div>
-	<div class = "bg-2 container-fluid">
-	<p>Willkommen, bienvenue, welcome!<br>
-		Fremde, etranger, stranger.<br>
-		Gluklich zu sehen, je suis enchante,<br>
-		Happy to see you, bleibe, reste, stay.</p>
+		</div>
+		<div class = "bg-2 container-fluid">
+		<p>Willkommen, bienvenue, welcome!<br>
+			Fremde, etranger, stranger.<br>
+			Gluklich zu sehen, je suis enchante,<br>
+			Happy to see you, bleibe, reste, stay.</p>
 	</div>
 </body>
