--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 <body>
 	<canvas id="myCanvas" style="position:absolute;top:0;right:0;width:100%;height:100%;z-index:-1;background-color:#fffaf4">
 	</canvas>
+	<!-- Nav Bar -->
 	<div class = "navbar-default navbar-fixed-top">
 				<div class = "container-fluid bg-1">
 					<div class = "navbar-header">
