--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 				<h3>Week 1</h3>
 				<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-rounded">
 			</div>
-			<div class = "col-sm-4">
+			<div class = "col-xs-6 col-sm-4">
 				<h3>Week 2</h3>
 				<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-rounded">
 			</div>
-			<div class = "col-sm-4">
+			<div class = "col-xs-6 col-sm-4">
 				<h3>Week 3</h3>
 				<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-rounded">
 			</div>
