--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="gah.ico" />
+    <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
 </head>
 <body>
 	<canvas id="myCanvas" style="position:absolute;top:0;right:0;width:100%;height:100%;z-index:-1;background-color:#fffaf4">
