--- a/about.html
+++ b/about.html
@@ -41,11 +41,18 @@
 						</ul>
 					</div>
 				</div>
-		</div>
+	</div>
 		<div class = "bg-2 container-fluid">
-		<p>Willkommen, bienvenue, welcome!<br>
-			Fremde, etranger, stranger.<br>
-			Gluklich zu sehen, je suis enchante,<br>
-			Happy to see you, bleibe, reste, stay.</p>
+		<h2>About Me</h2>
+		<p> <b>Name:</b> Elijah Cobb</p>
+		<p> <b>Major:</b> Games</p>
+		<p> <b>Age:</b> 18</p>
+		<p> <b>Year:</b> First</p>
+		<p> <b>Origin:</b> <a href="https://en.wikipedia.org/wiki/Los_Angeles">Los Angeles</a> or <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon">Ashland, Oregon</a>. Take your pick</p>
+		<p><b>Hobbies and Intrests:</b> <br>
+		If your observant, you might guess I like playing video games, this is correct. I do enjoy games quite a bit. However, I'm not just games. I also enjoy theater, obscure sports, trivia (which includes alot) and other things that are less important to my idenity.</p>
+		<p><b>Why I am here:</b> <br>
+		This class is required for my Major, however it's supposed to be taken next year but the class I was supposed to take was very full so I added this class at the last second. That doesn't mean I'm not excited for this class. Programming has become a hobby of mine in the past 4 years so this class is perfect for me.</p>
+		<a href="https://en.wikipedia.org/wiki/Los_Angeles">Los Angeles</a>
 	</div>
 </body>
