--- a/about.html
+++ b/about.html
@@ -13,8 +13,6 @@
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
 </head>
 <body>
-	<canvas id="myCanvas" style="position:absolute;top:0;right:0;width:100%;height:100%;z-index:-1;background-color:#fffaf4">
-	</canvas>
 	<!-- Nav Bar -->
 	<div class = "navbar-default navbar-fixed-top">
 				<div class = "container-fluid bg-1">
@@ -43,16 +41,22 @@
 				</div>
 	</div>
 		<div class = "bg-2 container-fluid">
-		<h2>About Me</h2>
-		<p> <b>Name:</b> Elijah Cobb</p>
-		<p> <b>Major:</b> Games</p>
-		<p> <b>Age:</b> 18</p>
-		<p> <b>Year:</b> First</p>
-		<p> <b>Origin:</b> <a href="https://en.wikipedia.org/wiki/Los_Angeles">Los Angeles</a> or <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon">Ashland, Oregon</a>. Take your pick</p>
+			<div class = "row">
+				<div class = "col-sm-7">
+					<h2>About Me</h2>
+					<p> <b>Name:</b> Elijah Cobb</p>
+					<p> <b>Major:</b> Games</p>
+					<p> <b>Age:</b> 18</p>
+					<p> <b>Year:</b> First</p>
+					<p> <b>Origin:</b> <a href="https://en.wikipedia.org/wiki/Los_Angeles" target = "_blank">Los Angeles</a> or <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target = "_blank">Ashland, Oregon</a>. Take your pick</p>
+				</div>
+				<div class ="col-sm-3">
+					<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-circle">
+				</div>
+			</div>
 		<p><b>Hobbies and Intrests:</b> <br>
 		If your observant, you might guess I like playing video games, this is correct. I do enjoy games quite a bit. However, I'm not just games. I also enjoy theater, obscure sports, trivia (which includes alot) and other things that are less important to my idenity.</p>
 		<p><b>Why I am here:</b> <br>
 		This class is required for my Major, however it's supposed to be taken next year but the class I was supposed to take was very full so I added this class at the last second. That doesn't mean I'm not excited for this class. Programming has become a hobby of mine in the past 4 years so this class is perfect for me.</p>
-		<a href="https://en.wikipedia.org/wiki/Los_Angeles">Los Angeles</a>
 	</div>
 </body>
