--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<!-- 
+Elijah Cobb,
+ARTG 2260: Programing Basics, Section 2,
+ecobb81@gmail.com,
+Assignment 0: Make a Website,
+Elijah's Programings
+-->
 <head>
 	<title>ARTG2260 Assignments</title>
 	<link rel="stylesheet" href="styles.css">
@@ -13,8 +20,6 @@
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
 </head>
 <body>
-	<canvas id="myCanvas" style="position:absolute;top:0;right:0;width:100%;height:100%;z-index:-1;background-color:#fffaf4">
-	</canvas>
 	<!-- Nav Bar -->
 	<div class = "navbar-default navbar-fixed-top">
 			<div class = "container-fluid bg-1">
