--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 					<p> <b>Origin:</b> <a href="https://en.wikipedia.org/wiki/Los_Angeles" target = "_blank">Los Angeles</a> or <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target = "_blank">Ashland, Oregon</a>. Take your pick</p>
 				</div>
 				<div class ="col-sm-3">
-					<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-circle">
+					<img src = "Images/Pizza.jpg" class = "assignment-pic img-circle">
 				</div>
 			</div>
 		<p><b>Hobbies and Intrests:</b> <br>
