--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 		<p><b>Hobbies and Intrests:</b> <br>
-		If your observant, you might guess I like playing video games, this is correct. I do enjoy games quite a bit. However, I'm not just games. I also enjoy theater, obscure sports, trivia (which includes alot) and other things that are less important to my idenity.</p>
+		If you're observant, you might guess I like playing video games, this is correct. I do enjoy games quite a bit. However, I'm not just games. I also enjoy theater, obscure sports, trivia (which includes alot) and other things that are less important to my idenity.</p>
 		<p><b>Why I am here:</b> <br>
 		This class is required for my Major, however it's supposed to be taken next year but the class I was supposed to take was very full so I added this class at the last second. That doesn't mean I'm not excited for this class. Programming has become a hobby of mine in the past 4 years so this class is perfect for me.</p>
 	</div>
