FINAL: Website is Done
Everything is in, this is gonna be a complete overhall of everthing on this webpage.

--- a/Random.html
+++ b/Random.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" href="styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -17,34 +16,35 @@
 	<div class = "navbar-default navbar-fixed-top">
 		<div class = "container-fluid bg-1">
 			<div class = "navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">  
+					<span class="icon-bar"></span>
         			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>                        
+        			<span class="icon-bar"></span>                       
       			</button>
 				<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
 			</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
+			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class = "nav navbar-nav">
 					<li><a href="about.html">About</a></li>
 					<li class="dropdown">
-					        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
-					        <span class="caret"></span></a>
-					        <ul class="dropdown-menu">
-					          <li><a href="#">Week 1</a></li>
-					          <li><a href="#">Week 2</a></li>
-					          <li><a href="#">Week 3</a></li>
-					       </ul>
+					     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+					    <span class="caret"></span></a>
+					    <ul class="dropdown-menu">
+					          <li><a href="Weeks/Week1.html">Week 1</a></li>
+					          <li><a href="Weeks/Week2.html">Week 2</a></li>
+					          <li><a href="Weeks/Week3.html">Week 3</a></li>
+					    </ul>
+					</li>
 					<li class="active"><a href="Random.html">Random</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-
+	<!-- Top Of Page -->
 	<div class = "container-fluid bg-2">
 		<p>
 			This page is for the things from this class that serve no purpose other then that I want it here for future reference, this isn't meant to be part of any assignment. So here's some musical lyrics for you.</p>
-		<p> Oh, what a beautiful mornin'<br>
+		<p class = "bore"> Oh, what a beautiful mornin'<br>
 			Oh, what a beautiful day<br>
 			I've got a beautiful feelin'<br>
 			Everything's goin' my way
@@ -54,4 +54,5 @@
 			Gluklich zu sehen, je suis enchante,<br>
 			Happy to see you, bleibe, reste, stay.</p>
 	</div>
+	<div class="bott"></div>
 </body>
