--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
 	<link rel="stylesheet" href="styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -15,48 +14,51 @@
 <body>
 	<!-- Nav Bar -->
 	<div class = "navbar-default navbar-fixed-top">
-				<div class = "container-fluid bg-1">
-					<div class = "navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-	        				<span class="icon-bar"></span>
-	        				<span class="icon-bar"></span>
-	        				<span class="icon-bar"></span>                        
-	      				</button>
-						<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
-					</div>
-					<div class="collapse navbar-collapse" id="myNavbar">
-						<ul class = "nav navbar-nav">
-							<li class="active"><a href="about.html">About</a></li>
-							<li class="dropdown">
-						        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
-						        <span class="caret"></span></a>
-						        <ul class="dropdown-menu">
-						          <li><a href="#">Week 1</a></li>
-						          <li><a href="#">Week 2</a></li>
-						          <li><a href="#">Week 3</a></li>
-						       </ul>
-							<li><a href="Random.html">Random</a></li>
+		<div class = "container-fluid bg-1">
+			<div class = "navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">      
+					<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>     
+	      		</button>
+				<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class = "nav navbar-nav">
+					<li class="active"><a href="about.html">About</a></li>
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+						<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+						    <li><a href="Weeks/Week1.html">Week 1</a></li>
+						    <li><a href="Weeks/Week2.html">Week 2</a></li>
+						    <li><a href="Weeks/Week3.html">Week 3</a></li>
 						</ul>
-					</div>
-				</div>
+					</li>
+					<li><a href="Random.html">Random</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
-		<div class = "bg-2 container-fluid">
+	<!--Top of Page-->
+	<div class = "bg-2 container-fluid">
 			<div class = "row">
 				<div class = "col-sm-7">
-					<h2>About Me</h2>
+					<h2 class = "bg-1">About Me</h2>
 					<p> <b>Name:</b> Elijah Cobb</p>
 					<p> <b>Major:</b> Games</p>
 					<p> <b>Age:</b> 18</p>
 					<p> <b>Year:</b> First</p>
 					<p> <b>Origin:</b> <a href="https://en.wikipedia.org/wiki/Los_Angeles" target = "_blank">Los Angeles</a> or <a href="https://en.wikipedia.org/wiki/Ashland,_Oregon" target = "_blank">Ashland, Oregon</a>. Take your pick</p>
+					<p><b>Hobbies and Intrests:</b> <br>
+					If you're observant, you might guess I like playing video games, this is correct. I do enjoy games quite a bit. However, I'm not just games. I also enjoy theater, obscure sports, trivia (which includes alot) and other things that are less important to my idenity.</p>
 				</div>
-				<div class ="col-sm-3">
-					<img src = "Images/Pizza.jpg" class = "assignment-pic img-circle">
+				<div class ="col-sm-5">
+					<img src = "Images/Pizza.jpg" class = "img-circle profile">
 				</div>
 			</div>
-		<p><b>Hobbies and Intrests:</b> <br>
-		If you're observant, you might guess I like playing video games, this is correct. I do enjoy games quite a bit. However, I'm not just games. I also enjoy theater, obscure sports, trivia (which includes alot) and other things that are less important to my idenity.</p>
 		<p><b>Why I am here:</b> <br>
 		This class is required for my Major, however it's supposed to be taken next year but the class I was supposed to take was very full so I added this class at the last second. That doesn't mean I'm not excited for this class. Programming has become a hobby of mine in the past 4 years so this class is perfect for me.</p>
 	</div>
+	<div class="bott"></div>
 </body>
