--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ Elijah's Programings
 	<link rel="stylesheet" href="styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -22,61 +21,99 @@ Elijah's Programings
 <body>
 	<!-- Nav Bar -->
 	<div class = "navbar-default navbar-fixed-top">
-			<div class = "container-fluid bg-1">
-				<div class = "navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>                        
-      				</button>
-					<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
-				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class = "nav navbar-nav">
-						<li><a href="about.html">About</a></li>
-						<li class="dropdown">
-					        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
-					        <span class="caret"></span></a>
-					        <ul class="dropdown-menu">
-					          <li><a href="#">Week 1</a></li>
-					          <li><a href="#">Week 2</a></li>
-					          <li><a href="#">Week 3</a></li>
-					       </ul>
-						<li><a href="Random.html">Random</a></li>
-					</ul>
-				</div>
+		<div class = "container-fluid bg-1">
+			<div class = "navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">  
+					<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>
+        			<span class="icon-bar"></span>             
+      			</button>
+				<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
 			</div>
-	</div>
-	<!-- Body -->
-	<div class = "bg-2 container-fluid">
-		<div class = "row">
-			<div class = "col-md-9">
-				<p> Oh, what a beautiful mornin'<br>
-					Oh, what a beautiful day<br>
-					I've got a beautiful feelin'<br>
-					Everything's goin' my way</p>
-			</div>
-			<div class = "col-md-1">
-				<img src = "Images/Courtroom1.jpg" alt = "AGGRJECTAR" style="height:144px">
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class = "nav navbar-nav">
+					<li><a href="about.html">About</a></li>
+					<li class="dropdown">
+					    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+					    <span class="caret"></span></a>
+					    <ul class="dropdown-menu">
+					        <li><a href="Weeks/Week1.html">Week 1</a></li>
+					        <li><a href="Weeks/Week2.html">Week 2</a></li>
+					        <li><a href="Weeks/Week3.html">Week 3</a></li>
+					    </ul>
+					</li>
+					<li><a href="Random.html">Random</a></li>
+				</ul>
 			</div>
 		</div>
+	</div>
+	<!-- Top Of Page -->
+	<canvas id = "myCanvas" style = "position:fixed; display:block; width:15%; margin-left:2.5%; margin-right:auto; z-index: -1; background-color:#ffffff;">
+		</canvas>
+	<div class ="jumbotron containter-fluid bg-1 text-center" style ="background-color:powderblue;">
+			<h1><b>Welcome, witness the programmings</b></h1>
 	</div>
 	<div class = "bott container-fluid">
 		<h2>Weekly Assignments</h2>
 		<div class = "row">
 			<div class = "col-sm-4">
-				<h3>Week 1</h3>
-				<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-rounded">
+				<a href="Weeks/Week1.html">
+					<h3>Week 1</h3>
+					<img src = "Images/Stands/1.jpg" class = "assignment-pic img-rounded">
+				</a>
 			</div>
 			<div class = "col-xs-6 col-sm-4">
-				<h3>Week 2</h3>
-				<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-rounded">
+				<a href="Weeks/Week2.html">
+					<h3>Week 2</h3>
+					<img src = "Images/Stands/2.jpg" class = "assignment-pic img-rounded">
+				</a>
 			</div>
 			<div class = "col-xs-6 col-sm-4">
-				<h3>Week 3</h3>
-				<img src = "Images/Courtroom1.jpg" class = "assignment-pic img-rounded">
+				<a href="Weeks/Week3.html">
+					<h3>Week 3</h3>
+					<img src = "Images/Stands/3.jpg" class = "assignment-pic img-rounded">
+				</a>
+			</div>
+		</div>
+		<div class = "row">
+			<div class = "col-xs-6 col-sm-4">
+				<a href="Weeks/Week1.html">
+					<h3>Week 4</h3>
+					<img src = "Images/Stands/4.jpg" class = "assignment-pic img-rounded">
+				</a>
+			</div>
+			<div class = "col-xs-6 col-sm-4">
+				<a href="Weeks/Week1.html">
+					<h3>Week 5</h3>
+					<img src = "Images/Stands/5.jpg" class = "assignment-pic img-rounded">
+				</a>
+			</div>
+			<div class = "col-xs-6 col-sm-4">
+				<a href="Weeks/Week1.html">
+					<h3>Week 6</h3>
+					<img src = "Images/Stands/6.jpg" class = "assignment-pic img-rounded">
+				</a>
 			</div>
 		</div>
 	</div>
+	<script>
+		var c = document.getElementById("myCanvas");
+		var ctx = c.getContext("2d");
+		var tx = c.getContext("2d");
+		var ione = c.getContext("2d");
+		var itwo = c.getContext("2d");
+		ctx.beginPath();
+		ctx.arc(95,50,40,0,2*Math.PI);
+		ctx.stroke(); 
+		tx.beginPath();
+		tx.arc(95,50,30,0,1*Math.PI);
+		tx.stroke();
+		ione.beginPath();
+		ione.arc(85,40,5,0,2*Math.PI);
+		ione.stroke(); 
+		itwo.beginPath();
+		itwo.arc(105,40,5,0,2*Math.PI);
+		itwo.stroke(); 
+	</script>
 </body>
 </html>
