--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Elijah's Programings
 		</div>
 	</div>
 	<!-- Top Of Page -->
-	<canvas id = "myCanvas" style = "position:fixed; display:block; width:8%; margin-left:1%; margin-right:auto; z-index: -1; background-color:#ffffff;">
+	<canvas id = "myCanvas" style = "position:absolute; display:block; width:8%; margin-left:1%; margin-right:auto; z-index: -1; background-color:#ffffff; margin-top:10%">
 		</canvas>
 	<div class ="jumbotron containter-fluid bg-1 text-center" style ="background-color:powderblue;">
 			<h1><b>Welcome, witness the programmings</b></h1>
