Starting with JS

--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -41,16 +41,7 @@
 		</div>
 	</div>
 	<!-- Top Of Page -->
-	<div class = "top">
-		<canvas id = "myCanvas" style = "display:block; width:30%; height:20%; margin-left:auto; margin-right:auto; background-color:#ffffff;">
-		</canvas>
+	<div class = "bg-2">
+	<p><a href = "../Exercise_1/index.html">Exercise 1</a></p>
 	</div>
-
-	<script>
-		var c = document.getElementById("myCanvas");
-		var ctx = c.getContext("2d");
-		ctx.beginPath();
-		ctx.arc(95,50,40,0,2*Math.PI);
-		ctx.stroke(); 
-	</script>
 </body>
