Stickman at it agian
Added Stickman

--- a/Week1_Folders/Exercise_1/index.html
+++ b/Week1_Folders/Exercise_1/index.html
@@ -6,5 +6,6 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
+		<a href = "../../Weeks/Week1.html">Go back to Week 1 Page</a>
 	</body>
 	</html>
