--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class = "nav navbar-nav">
-					<li><a href="../About.html">About</a></li>
+					<li><a href="../about.html">About</a></li>
 					<li class="dropdown">
 						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
 						<span class="caret"></span></a>
