--- a/Week1_Folders/assignment_1_0/index.html
+++ b/Week1_Folders/assignment_1_0/index.html
@@ -6,11 +6,17 @@
 <!DOCTYPE html>
 	<html>
 	<head>
+		<title>Exercise 1</title>
+		<link rel="stylesheet" href="../../styles.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
 		</script>
-		<script src="script.js"></script>
 	</head>
 	<body>
-		<a href = "../../Weeks/Week1.html">Go back to Week 1 Page</a>
+		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
+		<p><a style ="text-decoration:none; " href = "../../Weeks/Week1.html">Go back to Week 1 Page</a></p>
+		</div>
+		<div class = "container-fluid">
+			<script src="script.js"></script>
+		</div>
 	</body>
 	</html>
