--- a/Week1_Folders/assignment_1_0/index.html
+++ b/Week1_Folders/assignment_1_0/index.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Exercise 1</title>
+		<title>Assignment 1.0</title>
 		<link rel="stylesheet" href="../../styles.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
 		</script>
