--- a/Week1_Folders/assignment_1_1/index.html
+++ b/Week1_Folders/assignment_1_1/index.html
@@ -1,7 +1,13 @@
-60<!DOCTYPE html>
+
+<!-- Elijah Cobb -->
+<!-- Artg:2260 Programming Basics: Section 2-->
+<!-- ecobb81@gmail.com -->
+<!-- Assignment 1.1 -->
+<!-- Title: Procedural Pastorial -->
+<!DOCTYPE html>
 	<html>
 	<head>
-		<title>Exercise 1</title>
+		<title>Assignment 1.1</title>
 		<link rel="stylesheet" href="../../styles.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
 		</script>
