--- a/Week1_Folders/Exercise_1/index.html
+++ b/Week1_Folders/Exercise_1/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<title>Exercise 1</title>
 		<link rel="stylesheet" href="../../styles.css">
+		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
 		</script>
 	</head>
 	<body>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Some Shapes: <i>Deluxe</i></h1></div>
+		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 		<p><a style ="text-decoration:none; " href = "../../Weeks/Week1.html">Go back to Week 1 Page</a></p>
-		</div>
-		<div class = "container-fluid">
-			<script src="script.js"></script>
 		</div>
 	</body>
 	</html>
