Refurbishing the Living Room
Cleaning up the world and making the world a better place

--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -42,9 +42,9 @@
 	</div>
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "../Week1_Folders/Exercise_1/index.html">Exercise 1: Draw Some Shapes</a></p>
-	<p><a href = "../Week1_Folders/assignment_1_0/index.html">Assignment 1.0: Stick Figure </a></p>
-	<p><a href = "../Week1_Folders/assignment_1_1/index.html">Assignment 1.1: Landscape </a></p>
+	<p><a href = "Week1_Folders/Exercise_1/index.html">Exercise 1: Draw Some Shapes</a></p>
+	<p><a href = "Week1_Folders/assignment_1_0/index.html">Assignment 1.0: Stick Figure </a></p>
+	<p><a href = "Week1_Folders/assignment_1_1/index.html">Assignment 1.1: Landscape </a></p>
 
 	</div>
 </body>
