--- a/Weeks/Week1_Folders/Exercise_1/index.html
+++ b/Weeks/Week1_Folders/Exercise_1/index.html
@@ -2,7 +2,7 @@
 	<html>
 	<head>
 		<title>Exercise 1</title>
-		<link rel="stylesheet" href="../../styles.css">
+		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
 		</script>
@@ -11,7 +11,7 @@
 		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Some Shapes: <i>Deluxe</i></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
-		<p><a style ="text-decoration:none; " href = "../../Weeks/Week1.html">Go back to Week 1 Page</a></p>
+		<p><a style ="text-decoration:none; " href = "../../Week1.html">Go back to Week 1 Page</a></p>
 		</div>
 	</body>
 	</html>
