--- a/Weeks/Week2.html
+++ b/Weeks/Week2.html
@@ -16,22 +16,22 @@
 	<div class = "navbar-default navbar-fixed-top">
 		<div class = "container-fluid bg-1">
 			<div class = "navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> 
-					<span class="icon-bar"></span>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">  
+				<span class="icon-bar"></span>
         			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>                     
+        			<span class="icon-bar"></span>                    
 	      		</button>
 				<a class="navbar-brand" href = "../index.html">Elijah's Programings</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class = "nav navbar-nav">
-					<li><a href="../About.html">About</a></li>
+					<li><a href="../about.html">About</a></li>
 					<li class="dropdown">
 						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="Week1.html">Week 1</a></li>
-							<li class = "active"><a href="Week2.html">Week 2</a></li>
+							<li class="active"><a href="Week1.html">Week 1</a></li>
+							<li><a href="Week2.html">Week 2</a></li>
 							<li><a href="Week3.html">Week 3</a></li>
 						</ul>
 					</li>
@@ -41,6 +41,7 @@
 		</div>
 	</div>
 	<!-- Top Of Page -->
-	<canvas id = "myCanvas" style = "position:fixed; display:block; width:50%; height:50%; margin-left:auto; margin-right:auto; background-color:#ffffff;">
-		</canvas>
+	<div class = "bg-2 container-fluid">
+	<p><a href = "Week2_Folders/Exercise_1/index.html">Exercise 1: Iteration</a></p>
+	</div>
 </body>
