Nested Iteration Title
Tilteindg the Nested Iteration

--- a/Weeks/Week2_Folders/Exercise_1/index.html
+++ b/Weeks/Week2_Folders/Exercise_1/index.html
@@ -8,7 +8,7 @@
 		</script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Basics of Iteration</i></h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Nested Iteration</i></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 		<p><a style ="text-decoration:none; " href = "../../Week2.html">Go back to Week 2 Page</a></p>
