--- a/Weeks/Week2.html
+++ b/Weeks/Week2.html
@@ -43,5 +43,6 @@
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
 	<p><a href = "Week2_Folders/Exercise_1/index.html">Exercise 1: Iteration</a></p>
+	<p><a href = "Week2_Folders/Assignment_2_0/index.html">Assignment 2.0: Tiles</a></p>
 	</div>
 </body>
