--- a/Random.html
+++ b/Random.html
@@ -6,6 +6,8 @@
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="random.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="gah.ico" />
@@ -54,5 +56,7 @@
 			Gluklich zu sehen, je suis enchante,<br>
 			Happy to see you, bleibe, reste, stay.</p>
 	</div>
+	<div id = "sketch-holder" class = "container-fluid"></div>
 	<div class="bott"></div>
 </body>
+</html>
