--- a/Weeks/Week2_Folders/Assignment_2_1/index.html
+++ b/Weeks/Week2_Folders/Assignment_2_1/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assigment 2.0</title>
+		<title>Assigment 2.1</title>
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
 		</script>
+		<script language="javascript" type="text/javascript" src="path/to/p5.dom.js"></script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Even Belieivn'</i></h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Drawing Application</i></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 		<p><a style ="text-decoration:none; " href = "../../Week2.html">Go back to Week 2 Page</a></p>
 		</div>
 	</body>
-</html>
+	</html>
