Drawing App: Final
A beutiful image

--- a/Weeks/Week2_Folders/Assignment_2_0/index.html
+++ b/Weeks/Week2_Folders/Assignment_2_0/index.html
@@ -1,3 +1,8 @@
+<!-- Elijah Cobb -->
+<!-- Artg:2260 Programming Basics: Section 2-->
+<!-- ecobb81@gmail.com -->
+<!-- Assignment 2.0 -->
+<!-- Title: Candyland -->
 <!DOCTYPE html>
 	<html>
 	<head>
@@ -8,7 +13,7 @@
 		</script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Even Belieivn'</i></h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Candy Land</i></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 		<p><a style ="text-decoration:none; " href = "../../Week2.html">Go back to Week 2 Page</a></p>
