--- a/Weeks/Week2_Folders/Assignment_2_1/index.html
+++ b/Weeks/Week2_Folders/Assignment_2_1/index.html
@@ -1,3 +1,9 @@
+<!-- Elijah Cobb -->
+<!-- Artg:2260 Programming Basics: Section 2-->
+<!-- ecobb81@gmail.com -->
+<!-- Assignment 2.1 -->
+<!-- Title: Drawing Application -->
+
 <!DOCTYPE html>
 	<html>
 	<head>
@@ -10,6 +16,9 @@
 	<body>
 		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Drawing Application</i></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
+		<div class = "container-fluid">
+			<img src = "../../../Images/drawing.jpg" class = "profile" style = "width:30%;">
+		</div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 		<p><a style ="text-decoration:none; " href = "../../Week2.html">Go back to Week 2 Page</a></p>
 		</div>
