--- a/Weeks/Week3.html
+++ b/Weeks/Week3.html
@@ -41,4 +41,8 @@
 		</div>
 	</div>
 	<!-- Top Of Page -->
+	<!-- Top Of Page -->
+	<div class = "bg-2 container-fluid">
+	<p><a href = "Week3_Folders/Exercise_1/index.html">Exercise 3.0: Screensaver</a></p>
+	</div>
 </body>
