Make sure you can get to the new stuff
That was stupid

--- a/Weeks/Week3.html
+++ b/Weeks/Week3.html
@@ -44,5 +44,6 @@
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
 	<p><a href = "Week3_Folders/Exercise_1/index.html">Exercise 3.0: Screensaver</a></p>
+	<p><a href = "Week3_Folders/Assignment_3_0/index.html">Assingment 3.0: Drawing Forms</a></p>
 	</div>
 </body>
