Make is ready for shipment
GO my preeties, go.

--- a/Weeks/Week3_Folders/Assignment_3_0/partTwo.html
+++ b/Weeks/Week3_Folders/Assignment_3_0/partTwo.html
@@ -8,7 +8,7 @@
 		</script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Drawing Form</h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Extra: Spiral Arms</h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 			<p><a style ="text-decoration:none; " href = "index.html">Part 1</a></p>
