--- a/Weeks/Week3_Folders/Assignment_3_0/index.html
+++ b/Weeks/Week3_Folders/Assignment_3_0/index.html
@@ -1,3 +1,9 @@
+<!-- Elijah Cobb -->
+<!-- Artg:2260 Programming Basics: Section 2-->
+<!-- ecobb81@gmail.com -->
+<!-- Assignment 2.1 -->
+<!-- Title: Spiral Arms -->
+
 <!DOCTYPE html>
 	<html>
 	<head>
@@ -8,10 +14,10 @@
 		</script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Drawing Form</h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Spiral Arms</h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
-			<p><a style ="text-decoration:none; " href = "partTwo.html">Part 2</a></p>
+			<p><a style ="text-decoration:none; " href = "partTwo.html">Extra Sketch</a></p>
 			<p><a style ="text-decoration:none; " href = "../../Week3.html">Go back to Week 3 Page</a></p>
 		</div>
 	</body>
