--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ Elijah's Programings
 					        <li><a href="Weeks/Week1.html">Week 1</a></li>
 					        <li><a href="Weeks/Week2.html">Week 2</a></li>
 					        <li><a href="Weeks/Week3.html">Week 3</a></li>
+					        <li><a href="Weeks/Week4.html">Week 4</a></li>
 					    </ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
@@ -75,7 +76,7 @@ Elijah's Programings
 		</div>
 		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
-				<a href="Weeks/Week1.html">
+				<a href="Weeks/Week4.html">
 					<h3>Week 4</h3>
 					<img src = "Images/Stands/4.jpg" class = "assignment-pic img-rounded">
 				</a>
