--- a/Random.html
+++ b/Random.html
@@ -21,7 +21,7 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">  
 					<span class="icon-bar"></span>
         			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>                       
+        			<span class="icon-bar"></span>             
       			</button>
 				<a class="navbar-brand" href = "index.html">Elijah's Programings</a>
 			</div>
@@ -29,15 +29,16 @@
 				<ul class = "nav navbar-nav">
 					<li><a href="about.html">About</a></li>
 					<li class="dropdown">
-					     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
+					    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Assignments
 					    <span class="caret"></span></a>
 					    <ul class="dropdown-menu">
-					          <li><a href="Weeks/Week1.html">Week 1</a></li>
-					          <li><a href="Weeks/Week2.html">Week 2</a></li>
-					          <li><a href="Weeks/Week3.html">Week 3</a></li>
+					        <li><a href="Weeks/Week1.html">Week 1</a></li>
+					        <li><a href="Weeks/Week2.html">Week 2</a></li>
+					        <li><a href="Weeks/Week3.html">Week 3</a></li>
+					        <li><a href="Weeks/Week4.html">Week 4</a></li>
 					    </ul>
 					</li>
-					<li class="active"><a href="Random.html">Random</a></li>
+					<li><a href="Random.html">Random</a></li>
 				</ul>
 			</div>
 		</div>
