--- a/Weeks/Week3.html
+++ b/Weeks/Week3.html
@@ -33,6 +33,7 @@
 							<li><a href="Week1.html">Week 1</a></li>
 							<li><a href="Week2.html">Week 2</a></li>
 							<li class = "active"><a href="Week3.html">Week 3</a></li>
+							<li><a href="Week4.html">Week 4</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
