--- a/Weeks/Week4.html
+++ b/Weeks/Week4.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Week 1</title>
+	<title>Week 4</title>
 	<link rel="stylesheet" href="../styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="../gah.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="gah.ico" />
     <link href='https://fonts.googleapis.com/css?family=Abril Fatface' rel='stylesheet'>
 </head>
 <body>
@@ -16,24 +16,24 @@
 	<div class = "navbar-default navbar-fixed-top">
 		<div class = "container-fluid bg-1">
 			<div class = "navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">  
-				<span class="icon-bar"></span>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">        
+					<span class="icon-bar"></span>
         			<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>                    
+        			<span class="icon-bar"></span>              
 	      		</button>
 				<a class="navbar-brand" href = "../index.html">Elijah's Programings</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class = "nav navbar-nav">
-					<li><a href="../about.html">About</a></li>
+					<li><a href="../About.html">About</a></li>
 					<li class="dropdown">
 						 <a class="dropdown-toggle" data-toggle="dropdown">Assignments
 						<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li class="active"><a href="Week1.html">Week 1</a></li>
+							<li><a href="Week1.html">Week 1</a></li>
 							<li><a href="Week2.html">Week 2</a></li>
 							<li><a href="Week3.html">Week 3</a></li>
-							<li><a href="Week4.html">Week 4</a></li>
+							<li class = "active"><a href="Week4.html">Week 4</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
@@ -42,10 +42,9 @@
 		</div>
 	</div>
 	<!-- Top Of Page -->
+	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week1_Folders/Exercise_1/index.html">Exercise 1.0: Draw Some Shapes</a></p>
-	<p><a href = "Week1_Folders/assignment_1_0/index.html">Assignment 1.0: Stick Figure </a></p>
-	<p><a href = "Week1_Folders/assignment_1_1/index.html">Assignment 1.1: Landscape </a></p>
-
+	<p><a href = "Week4_Folders/Exercise_1/index.html">Exercise 4.0: Teleporting Box </a></p>
+	<p><a href = "Week4_Folders/Assignment_4_0/index.html">Assingment 4.0: Game</a></p>
 	</div>
 </body>
