--- a/Weeks/Week4_Folders/Assignment_4_0/index.html
+++ b/Weeks/Week4_Folders/Assignment_4_0/index.html
@@ -1,3 +1,9 @@
+<!-- Elijah Cobb -->
+<!-- Artg:2260 Programming Basics: Section 2-->
+<!-- ecobb81@gmail.com -->
+<!-- Assignment 4.0 -->
+<!-- Title: Curling Extreme -->
+
 <!DOCTYPE html>
 	<html>
 	<head>
@@ -8,10 +14,15 @@
 		</script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Game</h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Curling <b>Extreme</b></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
-		<p><a style ="text-decoration:none; " href = "../../Week4.html">Go back to Week 4 Page</a></p>
+		<p>Curling <b>Extreme</b> <br>
+			Elijah Cobb<br>
+			Artg:2260 Programming Basics: Section 2<br>
+			Assignment 4.0<br>
+			The next steps here is to add collision between stones and other elements of the stage. If that's not enough the next step would be adding different game modes (Classic, Target Hitting, 2 Players, Challenge Mode, Party Mode.) If I get to that point I would also want to try to add powerups to make gameplay more compelling.<br><br>
+			<a style ="text-decoration:none; " href = "../../Week4.html">Go back to Week 4 Page</a></p>
 		</div>
 	</body>
 	</html>
