Some sort of final thing

--- a/Weeks/Week4_Folders/Assignment_4_0/index.html
+++ b/Weeks/Week4_Folders/Assignment_4_0/index.html
@@ -21,7 +21,8 @@
 			Elijah Cobb<br>
 			Artg:2260 Programming Basics: Section 2<br>
 			Assignment 4.0<br>
-			The next steps here is to add collision between stones and other elements of the stage. If that's not enough the next step would be adding different game modes (Classic, Target Hitting, 2 Players, Challenge Mode, Party Mode.) If I get to that point I would also want to try to add powerups to make gameplay more compelling.<br><br>
+			The next steps here is to add collision between stones and other elements of the stage. If that's not enough the next step would be adding different game modes (Classic, Target Hitting, 2 Players, Challenge Mode, Party Mode.) If I get to that point I would also want to try to add powerups to make gameplay more compelling.<br>
+			<br>
 			<a style ="text-decoration:none; " href = "../../Week4.html">Go back to Week 4 Page</a></p>
 		</div>
 	</body>
