--- a/Weeks/Week1.html
+++ b/Weeks/Week1.html
@@ -34,6 +34,7 @@
 							<li><a href="Week2.html">Week 2</a></li>
 							<li><a href="Week3.html">Week 3</a></li>
 							<li><a href="Week4.html">Week 4</a></li>
+							<li><a href="Week5.html">Week 5</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
