--- a/Weeks/Week5.html
+++ b/Weeks/Week5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Week 3</title>
+	<title>Week 4</title>
 	<link rel="stylesheet" href="../styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,9 +32,9 @@
 						<ul class="dropdown-menu">
 							<li><a href="Week1.html">Week 1</a></li>
 							<li><a href="Week2.html">Week 2</a></li>
-							<li class = "active"><a href="Week3.html">Week 3</a></li>
+							<li><a href="Week3.html">Week 3</a></li>
 							<li><a href="Week4.html">Week 4</a></li>
-							<li><a href="Week5.html">Week 5</a></li>
+							<li class = "active"><a href="Week5.html">Week 5</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
@@ -45,7 +45,7 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week3_Folders/Exercise_1/index.html">Exercise 3.0: Screensaver</a></p>
-	<p><a href = "Week3_Folders/Assignment_3_0/index.html">Assingment 3.0: Drawing Forms</a></p>
+	<p><a href = "Week4_Folders/Exercise_1/index.html">Exercise 4.0: Teleporting Box </a></p>
+	<p><a href = "Week4_Folders/Assignment_4_0/index.html">Assingment 4.0: Game</a></p>
 	</div>
 </body>
