--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
 						    <li><a href="Weeks/Week2.html">Week 2</a></li>
 						    <li><a href="Weeks/Week3.html">Week 3</a></li>
 						    <li><a href="Weeks/Week4.html">Week 4</a></li>
+						    <li><a href="Weeks/Week5.html">Week 5</a></li>
 						</ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
