--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ Elijah's Programings
 					        <li><a href="Weeks/Week2.html">Week 2</a></li>
 					        <li><a href="Weeks/Week3.html">Week 3</a></li>
 					        <li><a href="Weeks/Week4.html">Week 4</a></li>
+					        <li><a href="Weeks/Week5.html">Week 5</a></li>
 					    </ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
@@ -82,7 +83,7 @@ Elijah's Programings
 				</a>
 			</div>
 			<div class = "col-xs-6 col-sm-4">
-				<a href="Weeks/Week1.html">
+				<a href="Weeks/Week5.html">
 					<h3>Week 5</h3>
 					<img src = "Images/Stands/5.jpg" class = "assignment-pic img-rounded">
 				</a>
