--- a/Weeks/Week4.html
+++ b/Weeks/Week4.html
@@ -47,6 +47,6 @@
 	<div class = "bg-2 container-fluid">
 	<p><a href = "Week4_Folders/Exercise_1/index.html">Exercise 4.0: Teleporting Box </a></p>
 	<p><a href = "Week4_Folders/Assignment_4_0/index.html">Assingment 4.0: Game</a></p>
-	<p><a href = "https://youtu.be/LNTQeBbQPAE">Bloopers</a></p>
+	<p><a href = "https://youtu.be/LNTQeBbQPAE">Blooper Clip from the production process</a></p>
 	</div>
 </body>
