--- a/Weeks/Week5_Folders/Assignment_5_0/index.html
+++ b/Weeks/Week5_Folders/Assignment_5_0/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>Assignment 4.0</title>
+		<title>Assignment 5.0</title>
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
@@ -17,13 +17,7 @@
 		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Curling <b>Extreme</b></h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
-		<p>Curling <b>Extreme</b> <br>
-			Elijah Cobb<br>
-			Artg:2260 Programming Basics: Section 2<br>
-			Assignment 4.0<br>
-			The next steps here is to add collision between stones and other elements of the stage. If that's not enough the next step would be adding different game modes (Classic, Target Hitting, 2 Players, Challenge Mode, Party Mode.) If I get to that point I would also want to try to add powerups to make gameplay more compelling.<br>
-			<br>
-			<a style ="text-decoration:none; " href = "../../Week4.html">Go back to Week 4 Page</a></p>
+			<p><a style ="text-decoration:none; " href = "../../Week5.html">Go back to Week 5 Page<a></p>
 		</div>
 	</body>
 	</html>
