CURLING EXTREME SUPER DELUXE EDITION HORSE PUNCHER!
(No horses were punced in the making of this game)

(Super stands for bugs) There's many of them)

--- a/Weeks/Week5_Folders/Assignment_5_0/index.html
+++ b/Weeks/Week5_Folders/Assignment_5_0/index.html
@@ -1,8 +1,8 @@
 <!-- Elijah Cobb -->
 <!-- Artg:2260 Programming Basics: Section 2-->
 <!-- ecobb81@gmail.com -->
-<!-- Assignment 4.0 -->
-<!-- Title: Curling Extreme -->
+<!-- Assignment 5.0 -->
+<!-- Title: Super Curling Extreme-->
 
 <!DOCTYPE html>
 	<html>
@@ -14,7 +14,7 @@
 		</script>
 	</head>
 	<body>
-		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>Curling <b>Extreme</b></h1></div>
+		<div class = "bg-1 container-fluid" style="text-align: center;"><h1> <b><i>Super</i></b>  Curling Extreme</h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
 			<p><a style ="text-decoration:none; " href = "../../Week5.html">Go back to Week 5 Page<a></p>
