--- a/Weeks/Week5.html
+++ b/Weeks/Week5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Week 4</title>
+	<title>Week 5</title>
 	<link rel="stylesheet" href="../styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,6 +35,7 @@
 							<li><a href="Week3.html">Week 3</a></li>
 							<li><a href="Week4.html">Week 4</a></li>
 							<li class = "active"><a href="Week5.html">Week 5</a></li>
+							<li><a href="Week6.html">Week 6</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
