--- a/Random.html
+++ b/Random.html
@@ -37,6 +37,7 @@
 					        <li><a href="Weeks/Week3.html">Week 3</a></li>
 					        <li><a href="Weeks/Week4.html">Week 4</a></li>
 					        <li><a href="Weeks/Week5.html">Week 5</a></li>
+					        <li><a href="Weeks/Week6.html">Week 6</a></li>
 					    </ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
