--- a/Weeks/Week2.html
+++ b/Weeks/Week2.html
@@ -35,6 +35,7 @@
 							<li><a href="Week3.html">Week 3</a></li>
 							<li><a href="Week4.html">Week 4</a></li>
 							<li><a href="Week5.html">Week 5</a></li>
+							<li><a href="Week6.html">Week 6</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
