Final for the Virus

--- a/Weeks/Week6_Folders/Assignment_6_0/index.html
+++ b/Weeks/Week6_Folders/Assignment_6_0/index.html
@@ -1,8 +1,8 @@
 <!-- Elijah Cobb -->
 <!-- Artg:2260 Programming Basics: Section 2-->
 <!-- ecobb81@gmail.com -->
-<!-- Assignment 5.0 -->
-<!-- Title: Super Curling Extreme-->
+<!-- Assignment 6.0 -->
+<!-- Title: The Virus-->
 
 <!DOCTYPE html>
 	<html>
@@ -17,6 +17,10 @@
 		<div class = "bg-1 container-fluid" style="text-align: center;"><h1>The Virus</h1></div>
 		<div id = "sketch-holder" class = "container-fluid"></div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
+			<p>The Virus<br>
+			Elijah Cobb<br>
+			Artg:2260 Programming Basics: Section 2<br>
+			Assignment 6.0<br>
 			<p><a style ="text-decoration:none; " href = "../../Week6.html">Go back to Week 6 Page<a></p>
 		</div>
 	</body>
