Name change the chance game
?

--- a/Weeks/Week6.html
+++ b/Weeks/Week6.html
@@ -46,6 +46,6 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week6_Folders/Assignment_6_0/index.html">Assingment 6.0: Kinetic Art</a></p>
+	<p><a href = "Week6_Folders/Assignment_6_0/index.html">Assingment 6.0: Generative Art</a></p>
 	</div>
 </body>
