--- a/Weeks/Week3_Folders/Assignment_3_0/partTwo.html
+++ b/Weeks/Week3_Folders/Assignment_3_0/partTwo.html
@@ -2,6 +2,7 @@
 	<html>
 	<head>
 		<title>Assignment 3.0</title>
+		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="scriptTwo.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
