--- a/Weeks/Week2_Folders/Assignment_2_0/index.html
+++ b/Weeks/Week2_Folders/Assignment_2_0/index.html
@@ -7,6 +7,7 @@
 	<html>
 	<head>
 		<title>Assigment 2.0</title>
+		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
