--- a/Weeks/Week4_Folders/Assignment_4_0/index.html
+++ b/Weeks/Week4_Folders/Assignment_4_0/index.html
@@ -8,6 +8,7 @@
 	<html>
 	<head>
 		<title>Assignment 4.0</title>
+		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
