--- a/Weeks/Week5_Folders/Exercise_1/index.html
+++ b/Weeks/Week5_Folders/Exercise_1/index.html
@@ -2,6 +2,7 @@
 	<html>
 	<head>
 		<title>Exercise 5.0</title>
+		<meta charset="utf-8" />
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js">
