--- a/Weeks/Week6_Folders/Assignment_6_0/index.html
+++ b/Weeks/Week6_Folders/Assignment_6_0/index.html
@@ -7,6 +7,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
+		<meta charset="utf-8" />
 		<title>Assignment 6.0</title>
 		<link rel="stylesheet" href="../../../styles.css">
 		<script src="script.js"></script>
