Big Push, Many Codes
This is implemting week 7 as well as an intial concept for the Olympics data project

--- a/Weeks/Week7.html
+++ b/Weeks/Week7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Week 6</title>
+	<title>Week 7</title>
 	<link rel="stylesheet" href="../styles.css">
 		<meta charset="utf-8">
   	  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,8 @@
 							<li><a href="Week3.html">Week 3</a></li>
 							<li><a href="Week4.html">Week 4</a></li>
 							<li><a href="Week5.html">Week 5</a></li>
-							<li class = "active"><a href="Week6.html">Week 6</a></li>
+							<li><a href="Week6.html">Week 6</a></li>
+							<li class = "active"><a href="Week7.html">Week 7</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
@@ -46,6 +47,6 @@
 	<!-- Top Of Page -->
 	<!-- Top Of Page -->
 	<div class = "bg-2 container-fluid">
-	<p><a href = "Week6_Folders/Assignment_6_0/index.html">Assingment 6.0: Generative Art</a></p>
+	<p><a href = "Week7_Folders/Assignment_7_0/index.html">Assingment 7.0: Data Visulazation</a></p>
 	</div>
 </body>
