--- a/Weeks/Week7_Folders/Exercise_7_0/index.html
+++ b/Weeks/Week7_Folders/Exercise_7_0/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-
+<link rel="stylesheet" href="../../../styles.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
 </head>
@@ -11,7 +11,7 @@
 <script>
 let api = "http://api.giphy.com/v1/gifs/search?";
 let apiKey = "&api_key=dc6zaTOxFJmzC";
-let query = "&q=rainbow";
+let query = "&q=doggo";
 
 
 function setup() {
