--- a/Weeks/Week3.html
+++ b/Weeks/Week3.html
@@ -36,6 +36,7 @@
 							<li><a href="Week4.html">Week 4</a></li>
 							<li><a href="Week5.html">Week 5</a></li>
 							<li><a href="Week6.html">Week 6</a></li>
+							<li><a href="Week7.html">Week 7</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
