--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
 						    <li><a href="Weeks/Week4.html">Week 4</a></li>
 						    <li><a href="Weeks/Week5.html">Week 5</a></li>
 						    <li><a href="Weeks/Week6.html">Week 6</a></li>
+						    <li><a href="Weeks/Week7.html">Week 7</a></li>
 						</ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
