--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Elijah's Programings
 					        <li><a href="Weeks/Week4.html">Week 4</a></li>
 					        <li><a href="Weeks/Week5.html">Week 5</a></li>
 					        <li><a href="Weeks/Week6.html">Week 6</a></li>
+					        <li><a href="Weeks/Week7.html">Week 7</a></li>
 					    </ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
@@ -57,7 +58,7 @@ Elijah's Programings
 	<div class = "bott container-fluid">
 		<h2>Weekly Assignments</h2>
 		<div class = "row">
-			<div class = "col-sm-4">
+			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week1.html">
 					<h3>Week 1</h3>
 					<img src = "Images/Stands/1.jpg" class = "assignment-pic img-rounded">
@@ -93,6 +94,14 @@ Elijah's Programings
 				<a href="Weeks/Week6.html">
 					<h3>Week 6</h3>
 					<img src = "Images/Stands/6.jpg" class = "assignment-pic img-rounded">
+				</a>
+			</div>
+		</div>
+		<div class = "row">
+			<div class = "col-sm-4">
+				<a href="Weeks/Week7.html">
+					<h3>Week 7</h3>
+					<img src = "Images/Stands/7.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
 		</div>
