--- a/Weeks/Week7_Folders/Assignment_7_0/index.html
+++ b/Weeks/Week7_Folders/Assignment_7_0/index.html
@@ -20,8 +20,8 @@
 			<div class = "bg-1"><p id = "label-oly"class ="noMargin" style= "font-family: Abril Fatface; font-size:25px; margin-bottom:-.8%">I:</p><h1 class = "noMargin" id = "yearlabel">Athens 1896</h1><i><h1 id = "date-label"class = "noMargin" style="font-size:20px; color:grey; margin-top:-.8%">6 April - 15 April</h1></i></div>
 			<div id="chart_div" class = "defaultCanvas" style="width: 70%; height: 40%;"></div>
 			<div class = "bg-1">
-				<button id="prev"> Last City </button>
-				<button id="add"> New City </button>
+				<button id="prev" class = "button"> Last City </button>
+				<button id="add" class = "button"> New City </button>
 			</div>
 		</div>
 		<div class = "bg-2 container-fluid" style = "margin-top:10px; text-align:center;">
