--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ Elijah's Programings
 					        <li><a href="Weeks/Week5.html">Week 5</a></li>
 					        <li><a href="Weeks/Week6.html">Week 6</a></li>
 					        <li><a href="Weeks/Week7.html">Week 7</a></li>
+					         <li><a href="Weeks/Week9.html">Week 9</a></li>
 					    </ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
@@ -70,20 +71,22 @@ Elijah's Programings
 					<img src = "Images/Stands/2.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
+		</div>
+		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week3.html">
 					<h3>Week 3</h3>
 					<img src = "Images/Stands/3.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
-		</div>
-		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week4.html">
 					<h3>Week 4</h3>
 					<img src = "Images/Stands/4.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
+		</div>
+		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week5.html">
 					<h3>Week 5</h3>
@@ -98,10 +101,18 @@ Elijah's Programings
 			</div>
 		</div>
 		<div class = "row">
-			<div class = "col-sm-4">
+			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week7.html">
 					<h3>Week 7</h3>
 					<img src = "Images/Stands/7.jpg" class = "assignment-pic img-rounded">
+				</a>
+			</div>
+		</div>
+		<div class = "row">
+			<div class = "col-sm-4">
+				<a href="Weeks/Week9.html">
+					<h3>Week 9</h3>
+					<img src = "Images/Stands/9.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
 		</div>
