--- a/Weeks/Week5.html
+++ b/Weeks/Week5.html
@@ -37,6 +37,7 @@
 							<li class = "active"><a href="Week5.html">Week 5</a></li>
 							<li><a href="Week6.html">Week 6</a></li>
 							<li><a href="Week7.html">Week 7</a></li>
+							<li><a href="Week9.html">Week 9</a></li>
 						</ul>
 					</li>
 					<li><a href="../Random.html">Random</a></li>
