--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
 						    <li><a href="Weeks/Week5.html">Week 5</a></li>
 						    <li><a href="Weeks/Week6.html">Week 6</a></li>
 						    <li><a href="Weeks/Week7.html">Week 7</a></li>
+						    <li><a href="Weeks/Week9.html">Week 9</a></li>
 						</ul>
 					</li>
 					<li><a href="Random.html">Random</a></li>
