--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Elijah's Programings
 	<div class = "bott container-fluid">
 		<h2>Weekly Assignments</h2>
 		<div class = "row">
-			<div class = "col-xs-6 col-sm-4">
+			<div class = "col-sm-4">
 				<a href="Weeks/Week1.html">
 					<h3>Week 1</h3>
 					<img src = "Images/Stands/1.jpg" class = "assignment-pic img-rounded">
@@ -71,29 +71,27 @@ Elijah's Programings
 					<img src = "Images/Stands/2.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
-		</div>
-		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week3.html">
 					<h3>Week 3</h3>
 					<img src = "Images/Stands/3.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
+		</div>
+		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week4.html">
 					<h3>Week 4</h3>
 					<img src = "Images/Stands/4.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
-		</div>
-		<div class = "row">
 			<div class = "col-xs-6 col-sm-4">
 				<a href="Weeks/Week5.html">
 					<h3>Week 5</h3>
 					<img src = "Images/Stands/5.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
-			<div class = "col-xs-6 col-sm-4">
+			<div class = "col-sm-4">
 				<a href="Weeks/Week6.html">
 					<h3>Week 6</h3>
 					<img src = "Images/Stands/6.jpg" class = "assignment-pic img-rounded">
@@ -107,8 +105,12 @@ Elijah's Programings
 					<img src = "Images/Stands/7.jpg" class = "assignment-pic img-rounded">
 				</a>
 			</div>
-		</div>
-		<div class = "row">
+			<div class = "col-xs-6 col-sm-4">
+				<a href="https://hart890.github.io/ART2260_FinalProject/Game_Files/gamescreen.html">
+					<h3>Week 8</h3>
+					<img src = "Images/Stands/8.jpg" class = "assignment-pic img-rounded">
+				</a>
+			</div>
 			<div class = "col-sm-4">
 				<a href="Weeks/Week9.html">
 					<h3>Week 9</h3>
